--- a/website/index.html
+++ b/website/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Docker Jenkins Demo</title>
+		<title>Docker Jenkins Demo FOR GF TEST</title>
 		<meta http-equiv="content-type" content="text/html; charset=utf-8" />
 		<meta name="description" content="" />
 		<meta name="keywords" content="" />
@@ -28,7 +28,7 @@
 
 		<!-- Header -->
 			<header id="header" class="alt">
-				<h1><a href="index.html">Docker Demo</a> by Bibin wilson</h1>
+				<h1><a href="index.html">Docker Demo</a> by Huang Guoyan</h1>
 				<nav id="nav">
 					<ul>
 						<li><a href="index.html">Home</a></li>
@@ -162,6 +162,7 @@
 					<li><a href="#" class="icon fa-github"><span class="label">Github</span></a></li>
 					<li><a href="#" class="icon fa-dribbble"><span class="label">Dribbble</span></a></li>
 					<li><a href="#" class="icon fa-google-plus"><span class="label">Google+</span></a></li>
+					<li><a href="#" class="icon fa-google-plus"><span class="label">Huangguoyan</span></a></li>
 				</ul>
 				<ul class="copyright">
 					<li>&copy; Untitled. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
